fix : footer es responsive y se ayusta adecuadamente a la pantaña fix: enlace a la encuenta con color white, ahora es visible

--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,7 @@ header>div>a{
     gap: 30px;
     max-width: 800px;
     margin: 0 auto;
+    justify-items: center;
     /* background-color: rgb(81, 81, 239); */
 }
 .historia{
@@ -147,19 +148,21 @@ header>div>a{
     background-color:#3858c6;
     grid-column-start: 1;
     grid-column-end: 3;
-    text-align: center;
 }
 footer{
     background-color: #5149eb;
     padding: 20px;
     display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill,minmax(300px, 30%));
     gap: 16px;
     max-width: 100vw;
-    margin: 0 auto;
+    justify-content: center;
 }
 footer > div{
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+.link{
+    color: rgb(255, 255, 255);
 }
